force-app/main/default/objects/Prospecting_Activity__c/Prospecting_Activity__c.object-meta.xml
<CustomObject>
    <description>Tracks the time spent on specific prospecting activities.</description>
    <label>Prospecting Activity</label>
    <nameField>
        <label>Prospecting Activity Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Prospecting Activities</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>