force-app/main/default/objects/Prospecting_Activity__c/fields/Date__c.field-meta.xml
<CustomField>
    <fullName>Date__c</fullName>
    <label>Activity Date</label>
    <type>Date</type>
</CustomField>