force-app/main/default/objects/Prospecting_Activity__c/fields/Email_Count__c.field-meta.xml
<CustomField>
    <fullName>Email_Count__c</fullName>
    <description>Average number of emails sent for the week broken down by day.</description>
    <label>Average # of emails per day</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>