force-app/main/default/objects/Prospecting_Activity__c/fields/Hour_Count__c.field-meta.xml
<CustomField>
    <fullName>Hour_Count__c</fullName>
    <description>Average number of hours spent on prospecting broken down per day.</description>
    <label>Average # of hours per day</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>