force-app/main/default/objects/Prospecting_Activity__c/fields/Prospecting_Entry__c.field-meta.xml
<CustomField>
    <fullName>Prospecting_Entry__c</fullName>
    <label>Prospecting Entry</label>
    <referenceTo>Prospecting_Entry__c</referenceTo>
    <relationshipLabel>Prospecting Activities</relationshipLabel>
    <relationshipName>Prospecting_Activities</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>